# Search_Engine_Project22

./: CMakeLists.txt  DSAVLTree.h  DocParser.cpp  DocParser.h  Document.cpp  Document.h  QueryProcessor.cpp  QueryProcessor.h  README.md  StopWord.cpp  StopWord.h  UserInterface.cpp  UserInterface.h  Word.cpp  Word.h  catchTests.cpp  main.cpp
